@@ -15,3 +15,5 @@
     <%= submit_tag "Hospedar" %>
   </p>
 <% end %>
+
+<%= link_to 'Voltar', apartamentos_path %>
