@@ -50,7 +50,7 @@ table{
 	outline-color:#838B8B;
 	border-spacing: 1px;
 	background: #C1CDCD;
-	empty-cells: hide;
+	empty-cells: show;
 }
 
 td{
